Change working hours from Integer to BigDecimal